html fixed so all of form wraps

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ main img {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .space-between {
